--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                         <a href="#about">About</a>
                     </li>
                     <li class="page-scroll">
-                        <a href="#contact">Contact</a>
+                        <a href="#founders">Founders</a>
                     </li>
                 </ul>
             </div>
@@ -200,8 +200,8 @@
     </section>
 
     <!-- Founders Grid Section -->
-    <section id="portfolio">
-        <div class="container">
+    <section id="founders">
+        <div class="container" id="portfolio">
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2>Founders</h2>
