--- a/index.html
+++ b/index.html
@@ -39,13 +39,10 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
-                        <h1 class="brand-heading"> ― Osho </h1>
+                        <h1 class="brand-heading"> ― Keith </h1>
                         <p class="intro-text">
-                            “If you love a flower, don’t pick it up.
-                            Because if you pick it up it dies and it ceases to be what you love.
-                            So if you love a flower, let it be.
-                            Love is not about possession.
-                            Love is about appreciation.”
+                            As humans beings we all have flaws, but the one thing that makes living worth while is Love... but what if Love doesnt exist?
+                            what are we really to do, are we to just live life as empty shells and have no reason for living at all, or do we then search for love, in hopes that we might find something by faith.
                         </p>
                         <a href="https://www.facebook.com/keith.kndhlovu" class="btn btn-circle page-scroll">
                             <i class="fa fa-facebook animated"></i>
