--Inspiration from Josiah Gilbert Holland

--- a/index.html
+++ b/index.html
@@ -39,10 +39,12 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
-                        <h1 class="brand-heading"> ― Keith </h1>
+                        <!-- class="brand-heading" -->
+                        <h2> ― Josiah Gilbert Holland </h2>
                         <p class="intro-text">
-                            As humans beings we all have flaws, but the one thing that makes living worth while is Love... but what if Love doesnt exist?
-                            what are we really to do, are we to just live life as empty shells and have no reason for living at all, or do we then search for love, in hopes that we might find something by faith.
+                            “There is no royal road to anything. One thing at a time, all things in succession. That which grows fast, withers as rapidly. That which grows slowly, endures.”
+                            <br/>
+                            - via @keepinspiringme
                         </p>
                         <a href="https://www.facebook.com/keith.kndhlovu" class="btn btn-circle page-scroll">
                             <i class="fa fa-facebook animated"></i>
