--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
                         <!-- class="brand-heading" -->
-                        <h2> ― Josiah Gilbert Holland </h2>
+                        <h2> ― Anonymous </h2>
                         <p class="intro-text">
-                            “There is no royal road to anything. One thing at a time, all things in succession. That which grows fast, withers as rapidly. That which grows slowly, endures.”
+                            “The Lord your GOD, will never place you in a situation that he knows you cant handle, in so saying belieave in him and have faith in his plans”
                             <br/>
-                            - via @keepinspiringme
+                            - via @keith.ndhlovu
                         </p>
                         <a href="https://www.facebook.com/keith.kndhlovu" class="btn btn-circle page-scroll">
                             <i class="fa fa-facebook animated"></i>
