--Added new Quote

--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
                         <!-- class="brand-heading" -->
-                        <h2> ― Anonymous </h2>
+                        <h2> ― Albert Einstein </h2>
                         <p class="intro-text">
-                            “I think we need to understand that the reason for time is so that evrything does no have to happen at once.”
+                            “The only reason for time is so that everything doesn't happen at once.”
                             <br/>
-                            <!-- - via @keepinspiringme -->
+                            <a href="http://www.brainyquote.com/quotes/quotes/a/alberteins148878.html">@brainyquote</a>
                         </p>
                         <a href="https://www.facebook.com/keith.kndhlovu" class="btn btn-circle page-scroll">
                             <i class="fa fa-facebook animated"></i>
