--Added new Quote

--- a/index.html
+++ b/index.html
@@ -40,11 +40,14 @@
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
                         <!-- class="brand-heading" -->
-                        <h2> ― Albert Einstein </h2>
+                        <h2> ― Keith Ndhlovu </h2>
                         <p class="intro-text">
-                            “The only reason for time is so that everything doesn't happen at once.”
+                            “Program you mind to adapt to uncertainties that could help you achieve a desired goal, sometimes in life
+                            we are put in positions or conditions where you have no choice and having to make a descision between sinking
+                            or swiming, if you have good motivation you will end up seing that its better to drown while trying to swim
+                            until you get it right intead of giving up before you even begin.”
                             <br/>
-                            <a href="http://www.brainyquote.com/quotes/quotes/a/alberteins148878.html">@brainyquote</a>
+                            <!-- <a href="http://www.brainyquote.com/quotes/quotes/a/alberteins148878.html">@brainyquote</a> -->
                         </p>
                         <a href="https://www.facebook.com/keith.kndhlovu" class="btn btn-circle page-scroll">
                             <i class="fa fa-facebook animated"></i>
