--- a/index.html
+++ b/index.html
@@ -49,12 +49,16 @@
                             <br/>
                             <!-- <a href="http://www.brainyquote.com/quotes/quotes/a/alberteins148878.html">@brainyquote</a> -->
                         </p>
-                        <div id="adyo-div-1" style="width:300px; height:250px; background:red">
                         <a href="https://www.facebook.com/keith.kndhlovu" class="btn btn-circle page-scroll">
                             <i class="fa fa-facebook animated"></i>
                         </a>
                     </div>
                 </div>
+                <div class="row">
+                    <div class="col-md-8 col-md-offset-2">
+                       <div id="adyo-div-1" style="width:300px; height:250px; background:red"></div>
+                    </div>
+                </div>                
             </div>
         </div>
     </header>
