--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                             “Program you mind to adapt to uncertainties that could help you achieve a desired goal, sometimes in life
                             we are put in positions or conditions where you have no choice and having to make a descision between sinking
                             or swiming, if you have good motivation you will end up seing that its better to drown while trying to swim
-                            until you get it right intead of giving up before you even begin.”
+                            until you get it right instead of giving up before you even begin.”
                             <br/>
                             <!-- <a href="http://www.brainyquote.com/quotes/quotes/a/alberteins148878.html">@brainyquote</a> -->
                         </p>
@@ -54,12 +54,7 @@
                             <i class="fa fa-facebook animated"></i>
                         </a>
                     </div>
-                </div>
-                <div class="row">
-                    <div class="col-md-8 col-md-offset-2">
-
-                    </div>
-                </div>                
+                </div>               
             </div>
         </div>
     </header>
