--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     <!-- Custom Theme JavaScript -->
     <script src="js/grayscale.js"></script>
         
-    <script type="text/javascript">
+<!--     <script type="text/javascript">
         (function(){
           var s = document.createElement('script'); 
           var protocol = (window.location.protocol === 'https:' ? 'https:' : 'http:');
@@ -101,7 +101,7 @@
           var n = document.getElementsByTagName('script')[0]; 
           n.parentNode.insertBefore(s, n);
         }());
-    </script>
+    </script> -->
 
 </body>
 
