--- a/index.html
+++ b/index.html
@@ -42,10 +42,13 @@
                         <!-- class="brand-heading" -->
                         <h2> ― Keith Ndhlovu </h2>
                         <p class="intro-text">
-                            “Program you mind to adapt to uncertainties that could help you achieve a desired goal, sometimes in life
-                            we are put in positions or conditions where you have no choice and having to make a descision between sinking
-                            or swiming, if you have good motivation you will end up seing that its better to drown while trying to swim
-                            until you get it right instead of giving up before you even begin.”
+                            “The biggest mistake we make is forgeting hardship, because we look to things of  Ease, just to be comfortable and content about life, why do I say its a mistake? Well that's simple realy, hardships are motivation, they make you wanna strive for more than you are, and hardship is a great teacher.
+
+Ask yourself this, if you got hit on the head by a brick, because you were going in a straight line, are you gonna go in a straight ine ever again? Unless if you enjoy pain, youre gonna keep in that same direction.
+
+But otherwise you just change direction and go on with life, making wise choices, and grabbing opportunities with both hands...
+
+Just know one last thing, you need to tell yourself that, "I never loose, I learn"”
                             <br/>
                             <!-- <a href="http://www.brainyquote.com/quotes/quotes/a/alberteins148878.html">@brainyquote</a> -->
                         </p>
