--- a/index.html
+++ b/index.html
@@ -40,15 +40,11 @@
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
                         <!-- class="brand-heading" -->
-                        <h2> ― Keith Ndhlovu </h2>
+                        <h2> ― Steve Jobs </h2>
                         <p class="intro-text">
-                            “The biggest mistake we make is forgeting hardship, because we look to things of  Ease, just to be comfortable and content about life, why do I say its a mistake? Well that's simple realy, hardships are motivation, they make you wanna strive for more than you are, and hardship is a great teacher.
-
-Ask yourself this, if you got hit on the head by a brick, because you were going in a straight line, are you gonna go in a straight ine ever again? Unless if you enjoy pain, youre gonna keep in that same direction.
-
-But otherwise you just change direction and go on with life, making wise choices, and grabbing opportunities with both hands...
-
-Just know one last thing, you need to tell yourself that, "I never loose, I learn"”
+                            “Your time is limited, so don't waste it living someone else's life. 
+Don't be trapped by dogma – which is living with the results of other people's thinking. 
+Don't let the noise of other's opinions drown out your own inner voice”
                             <br/>
                             <!-- <a href="http://www.brainyquote.com/quotes/quotes/a/alberteins148878.html">@brainyquote</a> -->
                         </p>
