Updates on TopNavigation

--- a/index.html
+++ b/index.html
@@ -15,13 +15,59 @@
     </head>
     <body class="theme white">
         <header class="top-navigation">
-            <nav class="grey lighten-5">
+            <!-- <nav class="grey lighten-5">
                 <ul>
                     <li><a href="#home">Home</a></li>
                     <li><a href="#news">News</a></li>
                     <li><a href="#contact">Contact</a></li>
                     <li><a href="#about">About</a></li>
                   </ul>
+            </nav> -->
+            <nav>
+              <div class="nav-wrapper">
+                <a href="#" class="brand-logo">
+                  <div class="logo"></div>
+                </a>
+                <ul class="search-container">
+                  <li>
+                    <div class="input-field">
+                      <i class="material-icons prefix">search</i>
+                      <input placeholder="Search Facebook" id="icon_prefix" type="text">
+                    </div>
+                  </li>
+                </ul>
+                <ul class="center-navigation">
+                  <li>
+                    <a><i class="material-icons">home</i></a>
+                  </li>
+                  <li>
+                    <a><i class="material-icons">video_library</i></a>
+                  </li>
+                  <li>
+                    <a><i class="material-icons">storefront</i></a>
+                  </li>
+                  <li>
+                    <a><i class="material-icons">groups</i></a>
+                  </li>
+                  <li>
+                    <a><i class="material-icons">extension</i></a>
+                  </li>
+                </ul>
+                <ul class="right navigation-buttons">
+                  <li>
+                    <a class="btn-floating btn waves-effect waves-light grey lighten-2"><i class="black-text material-icons">add</i></a>
+                  </li>
+                  <li>
+                    <a class="btn-floating btn waves-effect waves-light grey lighten-2"><i class="black-text material-icons">chat</i></a>
+                  </li>
+                  <li>
+                    <a class="btn-floating btn waves-effect waves-light grey lighten-2"><i class="black-text material-icons">notifications</i></a>
+                  </li>
+                  <li>
+                    <a class="btn-floating btn waves-effect waves-light grey lighten-2"><i class="black-text material-icons">arrow_drop_down</i></a>
+                  </li>
+                </ul>
+              </div>
             </nav>
         </header>
 
