--- a/index.html
+++ b/index.html
@@ -25,48 +25,55 @@
             </nav> -->
             <nav>
               <div class="nav-wrapper">
-                <a href="#" class="brand-logo">
-                  <div class="logo"></div>
-                </a>
-                <ul class="search-container">
-                  <li>
-                    <div class="input-field">
-                      <i class="material-icons prefix">search</i>
-                      <input placeholder="Search Facebook" id="icon_prefix" type="text">
+                <div class="row">
+                  <a href="#" class="brand-logo">
+                    <div class="logo"></div>
+                  </a>
+                  <ul class="col s4 search-container">
+                    <li>
+                      <div class="input-field">
+                        <i class="material-icons prefix">search</i>
+                        <input placeholder="Search Facebook" id="icon_prefix" type="text">
+                      </div>
+                    </li>
+                  </ul>
+                  <ul class="col s4 center-navigation">
+                    <li class="col s1"></li>
+                    <li class="col s2">
+                      <a><i class="material-icons">home</i></a>
+                    </li>
+                    <li class="col s2">
+                      <a><i class="material-icons">video_library</i></a>
+                    </li>
+                    <li class="col s2">
+                      <a><i class="material-icons">storefront</i></a>
+                    </li>
+                    <li class="col s2">
+                      <a><i class="material-icons">groups</i></a>
+                    </li>
+                    <li class="col s2">
+                      <a><i class="material-icons">extension</i></a>
+                    </li>
+                    <li class="col s1"></li>
+                  </ul>
+                  <ul class="col s4 right navigation-buttons">
+                    <div class="col s4"></div>
+                    <div class="col s8">
+                      <li>
+                        <a class="btn-floating btn waves-effect waves-light grey lighten-2"><i class="black-text material-icons">add</i></a>
+                      </li>
+                      <li>
+                        <a class="btn-floating btn waves-effect waves-light grey lighten-2"><i class="black-text material-icons">chat</i></a>
+                      </li>
+                      <li>
+                        <a class="btn-floating btn waves-effect waves-light grey lighten-2"><i class="black-text material-icons">notifications</i></a>
+                      </li>
+                      <li>
+                        <a class="btn-floating btn waves-effect waves-light grey lighten-2"><i class="black-text material-icons">arrow_drop_down</i></a>
+                      </li>
                     </div>
-                  </li>
-                </ul>
-                <ul class="center-navigation">
-                  <li>
-                    <a><i class="material-icons">home</i></a>
-                  </li>
-                  <li>
-                    <a><i class="material-icons">video_library</i></a>
-                  </li>
-                  <li>
-                    <a><i class="material-icons">storefront</i></a>
-                  </li>
-                  <li>
-                    <a><i class="material-icons">groups</i></a>
-                  </li>
-                  <li>
-                    <a><i class="material-icons">extension</i></a>
-                  </li>
-                </ul>
-                <ul class="right navigation-buttons">
-                  <li>
-                    <a class="btn-floating btn waves-effect waves-light grey lighten-2"><i class="black-text material-icons">add</i></a>
-                  </li>
-                  <li>
-                    <a class="btn-floating btn waves-effect waves-light grey lighten-2"><i class="black-text material-icons">chat</i></a>
-                  </li>
-                  <li>
-                    <a class="btn-floating btn waves-effect waves-light grey lighten-2"><i class="black-text material-icons">notifications</i></a>
-                  </li>
-                  <li>
-                    <a class="btn-floating btn waves-effect waves-light grey lighten-2"><i class="black-text material-icons">arrow_drop_down</i></a>
-                  </li>
-                </ul>
+                  </ul>
+                </div>
               </div>
             </nav>
         </header>
