--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
                     <div class="logo"></div>
                   </a>
                   <ul class="col s4 search-container">
-                    <li>
-                      <div class="input-field">
-                        <i class="material-icons prefix">search</i>
-                        <input placeholder="Search Facebook" id="icon_prefix" type="text">
+                    <li class="search-list">
+                      <div class="input-field search-field">
+                        <!-- <i class="material-icons prefix">search</i> -->
+                        <input class="browser-default" placeholder="Search Facebook" id="icon_prefix" type="text">
                       </div>
                     </li>
                   </ul>
